Fixed long node text wrap problem
Despite overflow: hidden, long node names were still wrapping in Chrome
(OK in FF). Added a max-height to fix it.

--- a/deployment/http-root/css/codeine.css
+++ b/deployment/http-root/css/codeine.css
@@ -70,6 +70,7 @@ form.form-inline fieldset div:first-child {
   overflow: hidden;
   /* text-overflow: ellipsis; */
   position: relative;
+  max-height: 1.1rem;
 }
 
 /* This applies a gradient fade over the node name (instead of an ellipsis) */
